workload/apps/argocd/templates/networkpolicy-application-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-application-controller-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8082
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
      ports:
        - protocol: TCP
          port: 15008
  policyTypes:
  - Ingress
