workload/apps/argocd/templates/networkpolicy-redis.yaml
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: app.kubernetes.io/name: argocd-redis-network-policy
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: app.kubernetes.io/name: argocd-redis
#   policyTypes:
#     - Ingress
#   ingress:
#     - from:
#         - podSelector:
#             matchLabels:
#               app.kubernetes.io/name: argocd-server
#         - podSelector:
#             matchLabels:
#               app.kubernetes.io/name: argocd-application-controller
#         - podSelector:
#             matchLabels:
#               app.kubernetes.io/name: argocd-notifications-controller
#         - podSelector:
#             matchLabels:
#               app.kubernetes.io/name: argocd-applicationset-controller
#         - podSelector:
#             matchLabels:
#             app.kubernetes.io/name: argocd-repo-server
#       ports:
#         - protocol: TCP
#           port: 6379
#     - from:
#         - ipBlock:
#             cidr: 192.168.0.0/16
#         - ipBlock:
#             cidr: 172.16.0.0/16
#       ports:
#         - protocol: TCP
#           port: 15008


kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-redis-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-server
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-application-controller
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-repo-server
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-notifications-controller
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-applicationset-controller
      ports:
        - protocol: TCP
          port: 6379
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
      ports:
        - protocol: TCP
          port: 15008
