workload/apps/argocd/templates/networkpolicy-repo-server.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-repo-server-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
      ports:
        - protocol: TCP
          port: 8081
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8084
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
      ports:
        - protocol: TCP
          port: 15008
